<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.user_profile.EditProfile">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="10dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/secondary_gray"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl2"

            android:layout_width="match_parent"
            android:layout_height="300dp">


            <EditText
                android:id="@+id/ETName"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:autofillHints="name"
                android:fontFamily="@font/charger"
                android:gravity="bottom"
                android:inputType="text"
                android:hint="@string/roshan_nepal"

                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/cl2"
                app:layout_constraintTop_toTopOf="@id/cl2" />


            <EditText
                android:id="@+id/ETCollegeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="244dp"
                android:autofillHints="name"
                android:fontFamily="@font/charger"
                android:gravity="bottom"
                android:hint="@string/college_name"
                android:inputType="text"
                android:maxWidth="120dp"
                android:maxHeight="60dp"

                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/cl2"
                app:layout_constraintTop_toTopOf="@id/cl2">

            </EditText>

            <androidx.cardview.widget.CardView
                android:id="@+id/CVProfileImage"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_centerHorizontal="true"

                android:layout_centerVertical="true"
                android:layout_marginTop="140dp"
                app:cardCornerRadius="80dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.521"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <ImageView

                    android:id="@+id/IVProfileImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/profile_picture"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/rosh">

                </ImageView>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/CVAddFriend"
                android:layout_width="32dp"

                android:layout_height="32dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="1dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.97"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.05">


                <ImageView
                    android:id="@+id/IVAddFriend"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/black"
                    android:backgroundTint="@color/black"
                    android:contentDescription="@string/add_friend"
                    app:srcCompat="@android:drawable/ic_menu_add">

                </ImageView>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/TVCustomiseColor"
                android:layout_width="75dp"
                android:layout_height="16dp"
                android:layout_marginTop="284dp"
                android:background="#74757F"
                android:fontFamily="@font/charger"
                android:gravity="center"

                android:text="@string/customise_color"
                android:textColor="#ffffff"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.866"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>

            <TextView
                android:id="@+id/TVSave"
                android:layout_width="40dp"
                android:layout_height="16dp"
                android:layout_marginTop="284dp"
                android:background="#74757F"
                android:fontFamily="@font/charger"
                android:gravity="center"

                android:text="@string/save"
                android:textColor="#ffffff"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:background="@color/secondary_gray"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="9dp">

            <TextView

                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:fontFamily="@font/charger"
                android:text="@string/more_info"
                android:textColor="@color/black"
                android:textStyle="bold">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:fontFamily="@font/charger"
                    android:text="@string/address"
                    android:textColor="@color/black">

                </TextView>

                <EditText
                    android:id="@+id/ETAddress"
                    android:hint="@string/address_example"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:textSize="12sp"
                    android:layout_marginStart="5dp"

                    android:layout_marginBottom="2dp"
                    android:fontFamily="@font/charger"

                    android:textColor="@color/black"
                    android:autofillHints=""
                    android:inputType="text">

                </EditText>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:fontFamily="@font/charger"
                    android:text="@string/e_mail"
                    android:textColor="@color/black">

                </TextView>

                <TextView
                    android:id="@+id/fep_TVEmail"
                    android:gravity="center_vertical"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:textSize="12sp"
                    android:fontFamily="@font/charger"
                    android:text="@string/e_mail"
                    android:autofillHints=""
                    android:inputType="text">

                </TextView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:fontFamily="@font/charger"
                    android:text="@string/phone_no"
                    android:textColor="@color/black">

                </TextView>

                <EditText
                    android:id="@+id/ETPhone"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"

                    android:textSize="12sp"

                    android:fontFamily="@font/charger"
                   android:hint="@string/phone_num_example"
                    android:textColor="@color/black"
                    android:autofillHints=""
                    android:inputType="phone">

                </EditText>


            </LinearLayout>


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>