<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c0dde9"
    tools:context=".authentication.RegisterFragment">


        <RelativeLayout
            android:id="@+id/TILUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="140dp">

            <ImageButton
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="#c0dde9"
                android:src="@drawable/et_background">

            </ImageButton>

            <EditText
                android:id="@+id/ETUsername"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@android:color/transparent"
                android:fontFamily="@font/charger"
                android:gravity="center"
                android:hint="@string/username"
                android:inputType="textEmailAddress" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/TILEnterEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TILUsername"
            android:layout_marginStart="60dp"
            android:layout_marginTop="0dp">

            <ImageButton
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="#c0dde9"
                android:contentDescription="TODO"
                android:src="@drawable/et_background">

            </ImageButton>

            <EditText
                android:id="@+id/ETEmail"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@android:color/transparent"
                android:fontFamily="@font/charger"
                android:gravity="center"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/TILPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TILEnterEmail"
            android:layout_marginStart="60dp"

            >

            <ImageButton
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#c0dde9"
                android:contentDescription="TODO"
                android:src="@drawable/et_background">

            </ImageButton>

            <EditText
                android:id="@+id/ETPassword"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:autofillHints="password"
                android:background="@android:color/transparent"
                android:fontFamily="@font/charger"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rlBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/TILPassword"
            android:layout_marginStart="60dp">

            <ImageButton
                android:id="@+id/BTRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="#c0dde9"
                android:src="@drawable/btn_img">

            </ImageButton>

            <TextView
                android:layout_width="100sp"
                android:layout_height="40sp"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="24sp">

            </TextView>
        </RelativeLayout>

        <TextView
            android:id="@+id/TVLoginINRegister"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/rlBtn"
            android:layout_marginStart="130dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="130dp"
            android:fontFamily="@font/charger"
            android:gravity="center"
            android:text="@string/login" />


</RelativeLayout>