<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newsfeed.newsfeed_activities.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
           android:id="@+id/BTNewsFeed"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/secondary_one">

            <ImageView

                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_history_edu_24">

            </ImageView>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/BTChat"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/secondary_one">

            <ImageView

                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_chat_24">

            </ImageView>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/BTProfile"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/secondary_one">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_person_24" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ETPost"
                android:layout_width="320dp"
                android:layout_height="45dp"
                android:autofillHints="username"


                android:fontFamily="@font/charger"
                android:hint="@string/what_are_your_feeling"
                android:inputType="text" />

            <androidx.cardview.widget.CardView

                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:backgroundTint="@color/secondary_one">


                <Button
                    android:id="@+id/BTPost"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/secondary_one"
                    android:fontFamily="@font/charger"
                    android:gravity="center"
                    android:text="@string/post"
                    android:textColor="@color/black"
                    android:textSize="12dp" />


            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="634dp"
        android:layout_marginTop="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/BTRefresh"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="660dp"
            android:text="@string/refresh" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true">

            <androidx.recyclerview.widget.RecyclerView

                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>

        </ScrollView>
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>